# bazuka

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  autobazuka  autoupdater  debugnet  test.py
.github/workflows/: actions.yml  deploy.yml
ansible/: inventory.yml  vault.yml
ansible/handlers/: main.yml
contrib/ansible/: ansible.cfg  deploy.yml
contrib/ansible/templates/: bazuka.env.j2  bazuka.service.j2
contrib/ansible/vars/: bazuka.yml
contrib/seeds/: README.md  generate_seeds.py
src/: blockchain.rs  crypto.rs  genesis.rs  lib.rs  main.rs  messages.rs  network.rs  node.rs  primitives.rs
src/blockchain/: backend.rs  config.rs  error.rs  header.rs  keys.rs  mempool.rs  mod.rs  state.rs  test.rs  utils.rs
src/blockchain/ops/: apply_block.rs  apply_deposit.rs  apply_withdraw.rs  draft_block.rs  generate_state_patch.rs  mod.rs  pay_validator_and_delegators.rs  rollback.rs  select_transactions.rs  update_states.rs
src/blockchain/ops/apply_tx/: auto_delegate.rs  claim_undelegate.rs  create_contract.rs  create_token.rs  delegate.rs  init_undelegate.rs  mod.rs  regular_send.rs  undelegate.rs  update_contract.rs  update_staker.rs  update_token.rs
src/blockchain/test/: contract.rs  mod.rs  rewards.rs  state.rs  tokens.rs  vrf_randomness.rs
src/cli/: init.rs  mod.rs
src/cli/chain/: db_query.rs  health_check.rs  mod.rs  rollback.rs
src/cli/node/: add_mpn_worker.rs  mod.rs  start.rs  status.rs
src/cli/wallet/: add_token.rs  auto_delegate.rs  claim_undelegate.rs  delegate.rs  info.rs  init_undelegate.rs  mod.rs  new_token.rs  register_validator.rs  resend_pending.rs  reset.rs  send.rs  undelegate.rs
src/client/: error.rs  explorer.rs  messages.rs  mod.rs
src/common/: mod.rs
src/config/: blockchain.rs  bootstrap.rs  chaos.rs  genesis.rs  initials.rs  mod.rs  node.rs  punish.rs
src/consensus/: auth.rs  babe.rs  digest.rs  epoch.rs  epochs.rs  forktree.rs  header.rs  mod.rs  slots.rs
src/consensus/pos/: babe.rs  digest.rs  epoch.rs  mod.rs  slots.rs
src/core/: address.rs  bip39.rs  block.rs  blocks.rs  contract.rs  crypto.rs  digest.rs  hash.rs  header.rs  mod.rs  money.rs  number.rs  primitives.rs  transaction.rs
src/crypto/: curve.rs  ed25519.rs  eddsa.rs  field.rs  merkle.rs  mimc.rs  mod.rs  sr25519.rs  vrf.rs
src/crypto/eddsa/: mod.rs
src/crypto/jubjub/: curve.rs  mod.rs
src/db/: disk.rs  keys.rs  mod.rs  ram.rs  test.rs
src/keystore/: local.rs  mod.rs
src/mpn/: deposit.rs  mod.rs  update.rs  withdraw.rs
src/mpn/circuits/: deposit_circuit.rs  mod.rs  test.rs  update_circuit.rs  withdraw_circuit.rs
src/net/: mod.rs  p2p.rs
src/node/: context.rs  errors.rs  firewall.rs  heartbeat.rs  http.rs  mempool.rs  messages.rs  mod.rs  peer_manager.rs  seeds.rs  test.rs  upnp.rs
src/node/api/: drain_zero_mempool.rs  generate_block.rs  get_account.rs  get_balance.rs  get_blocks.rs  get_check_tx.rs  get_debug_data.rs  get_delegatees.rs  get_delegations.rs  get_explorer_blocks.rs  get_explorer_mempool.rs  get_explorer_mpn_accounts.rs  get_explorer_stakers.rs  get_headers.rs  get_logs.rs  get_mempool.rs  get_miner_puzzle.rs  get_mpn_account.rs  get_mpn_work.rs  get_outdated_heights.rs  get_outdated_states.rs  get_peers.rs  get_states.rs  get_stats.rs  get_token.rs  get_zero_mempool.rs  get_zero_transactions.rs  messages.rs  mod.rs  post_block.rs  post_miner.rs  post_miner_solution.rs  post_mpn_deposit.rs  post_mpn_payment.rs  post_mpn_solution.rs  post_mpn_transaction.rs  post_mpn_withdraw.rs  post_mpn_worker.rs  post_peer.rs  post_validator_claim.rs  (+6 more)
src/node/heartbeat/: cleanup_mempool.rs  discover_peers.rs  generate_block.rs  log_info.rs  mod.rs  promote_validator.rs  refresh.rs  send_mining_puzzle.rs  sync_blocks.rs  sync_clock.rs  sync_mempool.rs  sync_peers.rs  sync_state.rs
src/node/test/: mod.rs  simulation.rs
src/utils/: decode.rs  mod.rs
src/vrf/: mod.rs
src/wallet/: mod.rs  tx_builder.rs
src/zk/: groth16.rs  mimc.rs  mod.rs  ram.rs  state.rs
src/zk/groth16/: mod.rs
src/zk/groth16/gadgets/: mod.rs
src/zk/poseidon/: mod.rs
src/zk/poseidon/params/: README.md  mod.rs  poseidon_params_n255_t10_alpha5_M128.txt  poseidon_params_n255_t11_alpha5_M128.txt  poseidon_params_n255_t12_alpha5_M128.txt  poseidon_params_n255_t13_alpha5_M128.txt  poseidon_params_n255_t14_alpha5_M128.txt  poseidon_params_n255_t15_alpha5_M128.txt  poseidon_params_n255_t16_alpha5_M128.txt  poseidon_params_n255_t17_alpha5_M128.txt  poseidon_params_n255_t2_alpha5_M128.txt  poseidon_params_n255_t3_alpha5_M128.txt  (+6 more)
src/zk/poseidon4/: constants.rs  generate_constants.py  mod.rs
src/zk/state/: keys.rs  mod.rs
src/zk/test/: mod.rs
(+19 files in other folders)
