[package]
name = "bazuka"
version = "0.1.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_qs = "0.8"
home = "0.5.3"
db-key = "0.0.5"
ff = { version = "0.11", features = ["derive"] }
sha3 = "0.10.0"
bincode = "1.3.3"
rand = "0.8.5"
thiserror = "1.0"
num-bigint = "0.4"
num-integer = "0.1"
lru = "0.7.5"

# Node related deps
tokio = { version = "1", features = ["full"], optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
leveldb = { version = "0.8.6", optional = true }
structopt = { version = "0.3", default-features = false, optional = true }

# Proof-of-Work related deps
rust-randomx = { version = "0.3.1", optional = true }

# Proof-of-Stake related deps
num-rational = { version = "0.4.0", optional = true }
num-traits = { version = "0.2.8", optional = true }
futures-timer = { version = "3.0", optional = true }
async-trait = { version = "0.1.52", optional = true }
schnorrkel = { version = "0.9.1", features = [
    "preaudit_deprecated",
    "u64_backend",
    "getrandom",
    "rand",
    "std"
], default-features = false, optional = true }
merlin = { version = "2.0.0", default-features = false, optional = true }
hex = { version = "0.4.3", optional = true }

[features]
default = ["pow"]
node = ["tokio", "hyper", "leveldb", "futures", "structopt"]
pow = ["rust-randomx"]
pos = ["schnorrkel", "merlin", "futures-timer", "async-trait", "hex", "num-traits", "num-rational"]
