[package]
name = "bazuka"
version = "0.1.0"
authors = ["Keyvan Kambakhsh <keyvankambakhsh@gmail.com>"]
edition = "2021"

[dependencies]
log = "0.4"
env_logger = "0.9.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "0.11.5"
serde_qs = "0.8"
home = "0.5.3"
db-key = "0.0.5"
ff = { version = "0.12", features = ["derive", "derive_bits"] }
sha3 = "0.10.0"
bincode = "1.3.3"
rand = "0.7.0"
thiserror = "1.0"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
hex = "0.4.3"
colored = "2.0.0"
rust-randomx = "0.6.0"
bellman = "0.13.0"
bls12_381 = "0.7.0"
ed25519-dalek = { version = "1", features = ["serde"] }
rayon = "1.5.3"

# Node related deps
tokio = { version = "1", features = ["full"], optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
leveldb = { version = "0.8.6", optional = true }
structopt = { version = "0.3", default-features = false, optional = true }
async-trait = { version = "0.1.53", optional = true }
serde_yaml = { version = "0.8", optional = true }
tempdir = { version = "0.3.7", optional = true }

[features]
default = ["node"]
db = ["leveldb", "tempdir"]
client = ["tokio", "hyper", "futures", "structopt", "serde_yaml"]
node = ["client", "db", "async-trait"]
