[package]
name = "bazuka"
version = "0.13.29"
authors = ["El Geuse <geusebetel@proton.me>"]
edition = "2021"

[dependencies]
regex = "1.7.0"
log = "0.4"
env_logger = "0.9.0"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
serde_json = "1.0"
serde_bytes = "0.11.5"
serde_qs = "0.8"
home = "0.5.3"
db-key = "0.0.5"
ff = { version = "0.13", features = ["derive", "derive_bits"] }
sha3 = "0.10.0"
bincode = "1.3.3"
rand = "0.8.0"
thiserror = "1.0"
num-bigint = "0.4"
num-integer = "0.1"
num-traits = "0.2"
hex = "0.4.3"
colored = "2.0.0"
bellman = "0.13.0"
bls12_381 = "0.7.0"
ed25519-dalek = { version = "1", features = ["serde"] }
rayon = "1.5.3"

bip39 = "1"
rand_mnemonic = { package = "rand", version = "0.6.0" }
rand_core_mnemonic = { package = "rand_core", version = "0.4.0" }

# Node related deps
tokio = { version = "1", features = ["full"], optional = true }
hyper = { version = "0.14", features = ["full"], optional = true }
futures = { version = "0.3", optional = true }
leveldb = { version = "0.8.6", optional = true }
structopt = { version = "0.3", default-features = false, optional = true }
async-trait = { version = "0.1.53", optional = true }
serde_yaml = { version = "0.8", optional = true }
tempdir = { version = "0.3.7", optional = true }
schnorrkel = { version = "0.10.2", features = ["serde"] }
rand_chacha = "0.3.1"

[features]
default = ["node"]
db = ["leveldb", "tempdir"]
client = ["tokio", "hyper", "futures", "structopt", "serde_yaml"]
node = ["client", "db", "async-trait"]
